terraform/databases.tf
resource "aws_db_instance" "mysql" {
  identifier             = "my-mysql-db"
  allocated_storage      = 20
  engine                 = "mysql"
  engine_version         = "8.0"
  instance_class         = "db.t3.micro"
  username               = "admin"
  password               = random_password.mysql_password.result
  db_subnet_group_name   = aws_db_subnet_group.default.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  publicly_accessible    = true
  skip_final_snapshot    = true
  tags = {
    Environment = "dev"
    Owner       = "terraform-test"
  }
}


resource "aws_db_instance" "postgresql" {
  identifier             = "my-postgres-db"
  allocated_storage      = 40
  engine                 = "postgres"
  engine_version         = "15"
  instance_class         = "db.t3.micro"
  username               = "admin"
  password               = random_password.postgres_password.result
  db_subnet_group_name   = aws_db_subnet_group.default.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  publicly_accessible    = true
  skip_final_snapshot    = true

}
